<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.1.2</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>br.com.am53.visadirect</groupId>
    <artifactId>53-visa-direct-funds-transactions</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>53-visa-direct-funds-transactions</name>
    <description>Proyect for Visa Direct Pull Funds Transactions</description>

    <properties>
        <java.version>17</java.version>
        <spring-cloud.version>2022.0.3</spring-cloud.version>

<!--        <version.proguard>7.2.2</version.proguard>-->
<!--        <version.proguard-core>9.0.3</version.proguard-core>-->

    </properties>

    <dependencies>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>

        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <scope>runtime</scope>
        </dependency>

        <dependency>
            <groupId>org.springdoc</groupId>
            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
            <version>2.1.0</version>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-devtools</artifactId>
            <scope>runtime</scope>
            <optional>true</optional>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.flywaydb</groupId>
            <artifactId>flyway-core</artifactId>
        </dependency>

        <dependency>
            <groupId>org.modelmapper</groupId>
            <artifactId>modelmapper</artifactId>
            <version>3.1.0</version>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.springdoc</groupId>
            <artifactId>springdoc-openapi-ui</artifactId>
            <version>1.6.15</version>
        </dependency>

        <dependency>
            <groupId>javax.validation</groupId>
            <artifactId>validation-api</artifactId>
            <version>2.0.1.Final</version>
        </dependency>

		<!-- From version 7 on we need to add two dependencies -->
<!--		<dependency>-->
<!--			<groupId>com.guardsquare</groupId>-->
<!--			<artifactId>proguard-base</artifactId>-->
<!--			<version>${version.proguard}</version>-->
<!--			<scope>runtime</scope>-->
<!--			<optional>true</optional>-->
<!--		</dependency>-->
<!--		<dependency>-->
<!--			<groupId>com.guardsquare</groupId>-->
<!--			<artifactId>proguard-core</artifactId>-->
<!--			<version>${version.proguard-core}</version>-->
<!--			<scope>runtime</scope>-->
<!--			<optional>true</optional>-->
<!--		</dependency>-->

    </dependencies>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>

        <finalName>${project.artifactId}</finalName>

        <plugins>

<!--            <plugin>-->
<!--                <groupId>com.github.wvengen</groupId>-->
<!--                <artifactId>proguard-maven-plugin</artifactId>-->
<!--                <version>2.5.2</version> &lt;!&ndash; Asegúrate de usar la última versión disponible &ndash;&gt;-->
<!--                <executions>-->
<!--                    <execution>-->
<!--                        <id>proguard</id>-->
<!--                        <phase>package</phase>-->
<!--                        <goals>-->
<!--                            <goal>proguard</goal>-->
<!--                        </goals>-->
<!--                        <configuration>-->
<!--                            <proguardVersion>${version.proguard}</proguardVersion> &lt;!&ndash; La versión de ProGuard que estás utilizando &ndash;&gt;-->
<!--                            <injar>${project.build.finalName}.jar</injar>&lt;!&ndash; La ruta del archivo JAR de entrada &ndash;&gt;-->
<!--                            <outjar>${project.build.finalName}.jar</outjar>&lt;!&ndash; La ruta del archivo JAR de salida &ndash;&gt;-->
<!--                            <obfuscate>true</obfuscate>-->
<!--                            <proguardInclude>${project.basedir}/proguard.cfg</proguardInclude>-->
<!--                            <options>-->
<!--                                <option>-keep public class com.am53.visadirect.fundstransactions.Application { public static void main(java.lang.String[]); }</option>-->
<!--                                &lt;!&ndash; Otras opciones de configuración según tu proguard.cfg &ndash;&gt;-->
<!--                            </options>-->
<!--                            <libs>-->
<!--                                <lib>${java.home}/lib/rt.jar</lib>-->
<!--                                <lib>${java.home}/lib/jsse.jar</lib>-->
<!--                            </libs>-->
<!--                        </configuration>-->
<!--                    </execution>-->
<!--                </executions>-->
<!--            </plugin>-->

            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <excludes>
                        <exclude>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </exclude>
                    </excludes>
                </configuration>
            </plugin>

        </plugins>

    </build>

</project>
